<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_act_header"
            android:textColor="#FF6600"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10sp" >

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:gravity="center_horizontal"
            android:hint="@string/username_edt_hint"
            android:padding="5sp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:gravity="center_horizontal"
            android:hint="@string/password_edt_hint"
            android:inputType="textPassword"
            android:padding="5sp"
            android:textSize="18sp" />
         <EditText
            android:id="@+id/edtRePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:gravity="center_horizontal"
            android:hint="@string/re_password_edt_hint"
            android:inputType="textPassword"
            android:padding="5sp"
            android:textSize="18sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:id="@+id/btnConfirm"
            android:text="@string/btn_confirm" />
    </LinearLayout>

</LinearLayout>