<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <com.google.android.maps.MapView  
            android:id="@+id/mapView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:apiKey="0pO5vO6nJAsxxgnLPOYMa17bBcfkVtyWfPbC8PA"
            android:clickable="true" />

        <LinearLayout
            android:id="@+id/infoLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#97000000"
            android:clickable="true"
            android:onClick="centerToCurrentLocation"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/latitudeText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/latitude"
                    android:textColor="#FFFFFF" >
                </TextView>

                <TextView
                    android:id="@+id/providerText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/provider"
                    android:textColor="#FFFFFF" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/longitudeText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/longitude"
                    android:textColor="#FFFFFF" >
                </TextView>

                <TextView
                    android:id="@+id/accuracyText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/accuracy"
                    android:textColor="#FFFFFF" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="right" >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2sp"
                    android:id="@+id/btnReport"
                    android:text="Report" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>